--- a/PlantasVsZombisSIS457/PlantasVsZombisSIS457.vcxproj.filters
+++ b/PlantasVsZombisSIS457/PlantasVsZombisSIS457.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="AcumuladorMoneedas.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="ZombieSaltarin.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Zombi.h">
@@ -132,6 +135,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="AcumuladorMoneedas.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="ZombieSaltarin.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
